# codepipeline-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  updater.json  vite.config.ts
.github/workflows/: release.yml  tauri-release.yaml
@/components/ui/: tooltip.tsx
CodePipelineViewer/: Package.resolved  Package.swift  project.yml
CodePipelineViewer/CodePipelineViewer/: AppDelegate.swift  CodePipelineViewerApp.swift
CodePipelineViewer/CodePipelineViewer.xcodeproj/: project.pbxproj
CodePipelineViewer/CodePipelineViewer.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
CodePipelineViewer/CodePipelineViewer/Models/: Pipeline.swift  PipelineStatus.swift
CodePipelineViewer/CodePipelineViewer/Services/: AWSCodePipelineService.swift  NotificationService.swift
CodePipelineViewer/CodePipelineViewer/ViewModels/: PipelineViewModel.swift
CodePipelineViewer/CodePipelineViewer/Views/: ActionRowView.swift  ContentView.swift  EmptyStateView.swift  PipelineDetailView.swift  PipelineListView.swift  PipelinePickerView.swift  PipelineRowView.swift  StageProgressView.swift
CodePipelineViewer/fastlane/: Appfile  Fastfile  Matchfile
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Accordion.tsx  AddPipelines.tsx  Dialog.tsx  Drawer.tsx  NoPipelines.tsx  PipelineList.tsx  ScrollArea.tsx  Skeleton.tsx
src/components/pipeline/: PipelineHeader.tsx  PipelineStageInfo.tsx  ProgressBar.tsx
src/components/shad/: Accordion.tsx  Drawer.tsx  ScrollArea.tsx  Tooltip.tsx
src/utils/: NotificationsContext.tsx  PipelinesContext.tsx  pipelines.ts  test-data.ts
