[package]
name = "codepipeline-viewer"
version = "1.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "updater", "macos-private-api", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
security-framework = "2.9.2"
aws-config = "1.1.6"
aws-sdk-codepipeline = "1.15.0"
webbrowser = "0.8.12"
tauri-plugin-positioner = {version = "1.0.4", features = ["system-tray"] }
auto-launch = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
